Fixed minor bugs related to device realocation in domains